--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ body {
   place-items: start;
   min-width: 320px;
   min-height: 100vh;
+  background-color: blueviolet;
+  color: white;
 }
 
 h1 {
